# Cellulose

./: .gitignore  CONTRIBUTING.md  cellulose.ipynb  cellulose_evaluation_metrics.txt  cellulose_physics_metrics.txt  data.py  explore_pdos.py  extract_pdos.py  finetune.py  losses.py  models.py  pdos_readable_summary.txt  pyproject.toml  refs.json  refs_shifted.json  run_finetune.py  test.py  test_scatter.py  train.py  train.sh  train_electronic.py  train_electronic.py.bak  train_pdos.py  train_physics.py  trainer.py  utils.py
.agents/: AGENTS.md
.agents/rules/: caveman-navigation.md  code-style-guide.md
.agents/skills/: graphify-maintenance.md  pytorch-cuda-sanitizer.md  test-and-tea-loop.md
.agents/skills/caveman-communication/: SKILL.md
.agents/skills/python-pytorch-standards/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: CODE_OF_CONDUCT.md  SECURITY.md
graphify-out/: .graphify_labels.json  .graphify_labels.json.sig  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-22/: .graphify_analysis.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
