[project]
name = "cellulose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ase>=3.28.0",
    "castepxbin>=0.3.1",
    "dm-tree>=0.1.10",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "orb-models>=0.6.2",
    "torch>=2.11.0",
]

